force-app/src/objects/PersonaConfiguration__c.object
<CustomObject>
    <fields>
        <fullName>Event__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event</label>
        <referenceTo>EventApi__Event__c</referenceTo>
        <relationshipLabel>Persona Configuration</relationshipLabel>
        <relationshipName>PersonaConfiguration</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expertise__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Expertise</label>
        <referenceTo>Expertise__c</referenceTo>
        <relationshipLabel>Persona Configuration</relationshipLabel>
        <relationshipName>PersonaConfigurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExplicitWeight__c</fullName>
        <label>Explicit Weight</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GroupWeight__c</fullName>
        <formula>WeightIndex__c / Persona__r.nTotalWeightIndex__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Weight</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>IsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ItemLink__c</fullName>
        <formula>CASE( RecordType.DeveloperName,
&apos;Skill&apos;,  HYPERLINK(&apos;/&apos; + Id, SkillRecordType__c + &apos;: &apos; + Skill__r.Name + &apos; (&apos; + Name + &apos;)&apos;, &apos;_self&apos;),
&apos;AreaOfExpertise&apos;, HYPERLINK(&apos;/&apos; + Id,  &apos;Area of Expertise: &apos; + Expertise__r.Name + &apos; (&apos; + Name + &apos;)&apos;, &apos;_self&apos;),
&apos;N/A&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Item</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Persona__c</fullName>
        <label>Persona</label>
        <referenceTo>Persona__c</referenceTo>
        <relationshipLabel>Persona Configurations</relationshipLabel>
        <relationshipName>PersonaConfigurations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ScoreType__c</fullName>
        <formula>CASE( RecordType.DeveloperName,
&apos;Skill&apos;, TEXT(Skill__r.ScoreType__c) 
, &apos;Percentage&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Score Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SkillRecordType__c</fullName>
        <formula>Skill__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Skill Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Skill__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Skill</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Skill__c.RecordType.DeveloperName</field>
                <operation>notEqual</operation>
                <value>ConfiguredSkill</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Skill__c</referenceTo>
        <relationshipLabel>Persona Configuration</relationshipLabel>
        <relationshipName>PersonaConfigurations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ThresholdValue__c</fullName>
        <label>Threshold Value</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Threshold__c</fullName>
        <formula>CASE(ScoreType__c,
&apos;Percentage&apos;, TEXT(ThresholdValue__c) + &apos;%&apos;,
&apos;Number&apos;, &apos;# &apos; + TEXT(ThresholdValue__c),
&apos;N/A&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Threshold</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WeightIndex__c</fullName>
        <defaultValue>5</defaultValue>
        <label>Weight Index</label>
        <precision>1</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Persona Configuration</label>
    <nameField>
        <displayFormat>PCI-{0000}</displayFormat>
        <label>Persona Configuration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Persona Configurations</pluralLabel>
    <recordTypes>
        <fullName>Event</fullName>
        <active>true</active>
        <description>A specific event a person must attend to embody a persona.</description>
        <label>Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>Expertise</fullName>
        <active>true</active>
        <description>Expertise refers to a specific subject or skill set in which a person has a high level of knowledge or proficiency.</description>
        <label>Expertise</label>
    </recordTypes>
    <recordTypes>
        <fullName>Milestone</fullName>
        <active>true</active>
        <description>An achievement that shows progress in a person&apos;s development, often highlighting the effective use of their skills and expertise.</description>
        <label>Milestone</label>
    </recordTypes>
    <recordTypes>
        <fullName>Skill</fullName>
        <active>true</active>
        <description>A skill is a specific ability or proficiency that a person has developed through practice, training, or experience.</description>
        <label>Skill</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>